--- a/app/views/includes/navigation.inc.twig
+++ b/app/views/includes/navigation.inc.twig
@@ -1,7 +1,7 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="{{ constant('URLROOT')}} /pages/index">Home</a>
+            <a class="navbar-brand" href="{{ constant('URLROOT')}}/pages/index">Home</a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -14,7 +14,11 @@
                 <li class="nav-item"><a class="nav-link" href="{{ constant('URLROOT')}}/pages/contact">Contact</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ constant('URLROOT')}}/posts/index">Blog</a></li>
                 <li class="nav-item btn-login">
-
+                    {% if session.user_id is not empty %}
+                        <a class="nav-link" href="{{ constant('URLROOT')}}/users/logout">Log out</a>
+                    {% else %}
+                        <a class="nav-link" href="{{ constant('URLROOT')}}/users/login">Log in</a>
+                    {% endif %}
                 </li>
             </ul>
             <form class="form-inline">
