--- a/app/views/users/login.html.twig
+++ b/app/views/users/login.html.twig
@@ -1,24 +1,35 @@
 {% extends('default.html.twig') %}
 
 {% block content %}
-<div class="container-login">
-    <div class="wrapper-login">
-        <h2>Sign in</h2>
-        <form action="{{ constant('URLROOT')}}/users/login" method="POST">
-            <input type="text" placeholder="Username *" name="usernameOrEmail" value="{{ usernameOrEmail }}">
-            <span class="invalidFeedBack">
-                {{ usernameOrEmailError }}
-            </span>
-            <input type="text" placeholder="Password *" name="password">
-            <span class="invalidFeedBack">
-                {{ passwordError }}
-            </span>
-            {% if passwordError is not empty %}
-                <br>
-            {% endif %}
-            <button id="submit" type="submit" value="submit">Submit</button>
-            <p class="options">Not registered yet? <a href="{{ constant('URLROOT')}}/users/register">Sign up</a></p>
-        </form>
+<div class="container container-login wrapper-login">
+    <div class="row justify-content-center">
+        <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            <h2>Sign in</h2>
+            <form action="{{ constant('URLROOT')}}/users/login" method="POST">
+                    <div class="form-outline mb-4">
+                        <input class="form-control"  type="text" placeholder="Username *" name="usernameOrEmail" value="{{ usernameOrEmail }}">
+                        <span class="invalidFeedBack">
+                            {{ usernameOrEmailError }}
+                        </span>
+                    </div>
+
+                    <div class="form-outline mb-4">
+                        <input class="form-control" type="text" placeholder="Password *" name="password">
+                        <span class="invalidFeedBack">
+                            {{ passwordError }}
+                        </span>
+                        {% if passwordError is not empty %}
+                            <br>
+                        {% endif %}
+                    </div>
+
+                    <button class="myBtn btn btn-primary w-100 h1" type="submit" value="submit">Submit</button>
+                    <div class="text-center">
+                        <p class="options">Not registered yet? <a href="{{ constant('URLROOT')}}/users/register">Sign up</a></p>
+                    </div>
+
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
