--- a/app/views/posts/index.html.twig
+++ b/app/views/posts/index.html.twig
@@ -13,13 +13,13 @@
                    href="{{ constant('URLROOT')}}/posts/update/{{ post.id}}">
                                               Update
                 </a>
-                <form action="{{ constant('URLROOT')}}/posts/delete/"{{ post.id}}" method="POST" class="delete-form">
+                <form action="{{ constant('URLROOT')}}/posts/delete/{{ post.id}}" method="POST" class="delete-form">
                 <button class="myBtn red" name="submit" type="submit">Delete</button>
                 </form>
 
             {% endif %}
 
-            <h2>{{ post.title }}</h2>
+            <h2><a href="{{ constant('URLROOT') }}/posts/show/{{ post.id }}">{{ post.title }}</a></h2>
             <p>
                 {{ post.content | raw  }}
             </p>
