--- a/app/views/includes/head.inc.twig
+++ b/app/views/includes/head.inc.twig
@@ -9,4 +9,12 @@
     <title>{{ constant('SITENAME') }} </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ constant('URLROOT') }}/public/css/style.css">
+
+    <!-- WYSIWYG tiny cloud-->
+    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    <script>
+        tinymce.init({
+            selector: '#wysiwygTextArea'
+        });
+    </script>
 </head>
