--- a/app/views/posts/create.html.twig
+++ b/app/views/posts/create.html.twig
@@ -2,24 +2,30 @@
 
 {% block content %}
     <div class="container center">
-        <h1>Create new post</h1>
+        <h1 class="text-center pt-5">Vytvořit nový článek</h1>
 
         <form action="{{ constant('URLROOT')}}/posts/create" method="POST">
-            <div class="form-item">
-                <input type="text" name="title" placeholder="Title">
+            <div class="form-group mb-4 form-item">
+                <label>Nadpis</label>
+                <input class="form-control" type="text" name="title" placeholder="Titulek článku *">
                 <span class="invalidFeedBack">
                     {{ post.titleError }}
-            </span>
+                </span>
             </div>
 
-            <div class="form-item">
-                <textarea type="text" name="content" placeholder="Enter you post"></textarea>
+            <div class="form-group mb-4 form-item">
+                <label>Popisek</label>
+                <textarea rows="3" class="form-control " type="text" name="description" placeholder="Zadejte popisek"></textarea>
+            </div>
+
+            <div class="form-group mb-4 form-item ">
+                <textarea rows="12" class="form-control" id="wysiwygTextArea" type="text" name="content" placeholder="Zadejte svůj příspěvek *"></textarea>
                 <span class="invalidFeedBack">
                     {{ post.contentError }}
-            </span>
+                </span>
             </div>
 
-            <button class="myBtn green" name="submit" type="submit">Submit</button>
+            <button class="myBtn btn btn-primary green" name="submit" type="submit">Submit</button>
         </form>
     </div>
 {% endblock %}
