--- a/app/views/posts/update.html.twig
+++ b/app/views/posts/update.html.twig
@@ -2,21 +2,29 @@
 
 {% block content %}
 <div class="container center">
-    <h1>Úprava příspěvku</h1>
+    <h1 class="text-center pt-5 ">Úprava příspěvku</h1>
 
     <form
             action="{{ constant('URLROOT')}}/posts/update/{{ post.id}}"
             method="POST">
-        <div class="form-item">
-            <input type="text" name="title" placeholder="Title"
+        <div class="form-gorup mb-4 form-item">
+            <label>Nadpis</label>
+            <input class="form-control" type="text" name="title" placeholder="Titulek článku *"
                    value="{{ post.title }}">
             <span class="invalidFeedBack">
                 {{ post.titleError }}
             </span>
         </div>
 
-        <div class="form-item">
-            <textarea type="text" name="content" placeholder="Enter you post">
+        <div class="form-group mb-4 form-item">
+
+            <label>Popis článku</label>
+            <textarea class="form-control" type="text" name="description" placeholder="Zadejte popisek"></textarea>
+        </div>
+
+        <div class="form-group mb-4 form-item">
+            <label>Nadpis</label>
+            <textarea class="form-control" type="text" id="wysiwygTextArea" name="content" placeholder="Zadejte svůj příspěvek *">
                 {{ post.content }}
             </textarea>
             <span class="invalidFeedBack">
@@ -24,7 +32,7 @@
             </span>
         </div>
 
-        <button class="myBtn green" name="submit" type="submit">Submit</button>
+        <button class="myBtn btn btn-primary green" name="submit" type="submit">Submit</button>
     </form>
 </div>
 {% endblock %}
