--- a/app/views/users/register.html.twig
+++ b/app/views/users/register.html.twig
@@ -36,7 +36,7 @@
                         <br>
                     {% endif %}
                 </div>
-                <button class="myBtn btn btn-primary w-100 h1" id="submit" type="submit" value="submit">Submit</button>
+                <button class="myBtn btn btn-primary w-100" id="submit" type="submit" value="submit">Submit</button>
                 <p class="options">Already registered? <a href="{{ constant('URLROOT')}}/users/login">Sign in</a></p>
             </form>
         </div>
