footer, nav changes, start making changes according to assignment
for footer to be always at the bottom - i include footer file inside of tags article and not behind it + with special div of class mainSiteContent I adjust rest of the tag article content to be accross the whole page
- after I read assignment of the task (find out website should be conference system)I start with Review model

--- a/app/views/default.html.twig
+++ b/app/views/default.html.twig
@@ -9,11 +9,13 @@
 <body class="d-flex flex-column min-vh-100">
 {% include('includes/navigation.inc.twig') %}
 
-<content>
+<article>
+    <div class="mainSiteContent">
         {% block content %}
             default content
         {% endblock %}
-</content>
+    </div>
 {% include('includes/footer.inc.twig') %}
+</article>
 </body>
 </html>
