--- a/app/views/users/login.html.twig
+++ b/app/views/users/login.html.twig
@@ -1,7 +1,8 @@
 {% extends('default.html.twig') %}
 
 {% block content %}
-<div class="container container-login wrapper-login">
+<div class="container container-login">
+    <div class="wrapper-login">
     <div class="row justify-content-center">
         <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3">
             <h2>Sign in</h2>
@@ -30,6 +31,7 @@
 
             </form>
         </div>
+    </div>
     </div>
 </div>
 {% endblock %}
