--- a/app/views/includes/footer.inc.twig
+++ b/app/views/includes/footer.inc.twig
@@ -1,9 +1,9 @@
-<div class="divFooter bg-light">
+<footer class="divFooter bg-light">
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2020 Copyright:
         <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
     </div>
     <!-- Copyright -->
-</div>
+</footer>
 <!-- Footer -->
