--- a/app/views/posts/index.html.twig
+++ b/app/views/posts/index.html.twig
@@ -1,7 +1,7 @@
 {% extends('default.html.twig') %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-4">
     {% if session.user_id is not empty %}
         <a class="myBtn green" href="{{constant('URLROOT')}}/posts/create">Create</a>
     {% endif %}
