--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@ html, body{
     min-height: 100%;
 }
 body{
-    background:  linear-gradient(45deg, rgb(130, 183, 220),rgb(52, 102, 170), #f2f2f2);
+    background:  linear-gradient(45deg, rgb(130, 183, 220), #f2f2f2);
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
@@ -22,8 +22,7 @@ body{
     margin: 0 auto;
     float:none;
     text-align:center;
-    position: relative;
-    top:20%;
+    margin-top:2em;
 }
 
 .wrapper-login input{
@@ -69,11 +68,14 @@ body{
     background-color: #64A764;
     transition: 0.20s ease-in-out;
 }
-content{
-    min-height: 90%;
+
+.mainSiteContent{
+    min-height: calc(100vh - 3em - 3em); <!-- 3em is height of the footer, 3em approximate height of navbar
+                                        (cannot be specified exactly - cause of hamburger situation) -->
 }
 
 .divFooter{
+    height:3em;
     width:100%;
     margin-top:0.5em;
 }
