--- a/app/views/posts/update.html.twig
+++ b/app/views/posts/update.html.twig
@@ -12,14 +12,16 @@
             <input class="form-control" type="text" name="title" placeholder="Titulek článku *"
                    value="{{ post.title }}">
             <span class="invalidFeedBack">
-                {{ post.titleError }}
+                {{ titleError }}
             </span>
         </div>
 
         <div class="form-group mb-4 form-item">
 
             <label>Popis článku</label>
-            <textarea class="form-control" type="text" name="description" placeholder="Zadejte popisek"></textarea>
+            <textarea class="form-control" type="text" name="description" placeholder="Zadejte popisek">
+                {{ post.description }}
+            </textarea>
         </div>
 
         <div class="form-group mb-4 form-item">
@@ -28,7 +30,7 @@
                 {{ post.content }}
             </textarea>
             <span class="invalidFeedBack">
-                {{ post.contentError }}
+                {{ contentError }}
             </span>
         </div>
 
