--- a/app/views/users/login.html.twig
+++ b/app/views/users/login.html.twig
@@ -1,37 +1,58 @@
 {% extends('default.html.twig') %}
 
 {% block content %}
+
 <div class="container container-login">
     <div class="wrapper-login">
-    <div class="row justify-content-center">
-        <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3">
-            <h2>Sign in</h2>
-            <form action="{{ constant('URLROOT')}}/users/login" method="POST">
+        <div class="row justify-content-center">
+            <div class="col-sm-6 col-md-6 col-lg-5 col-xl-4">
+                <h2>Přihlásit se</h2>
+                <form action="{{ constant('URLROOT')}}/users/login" method="POST" id="loginForm" onkeydown="logIn()">
+                        <div class="form-outline mb-4">
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <div class="input-group-addon iconInputLeft pt-2" >
+                                            <i class="fas fa-user"></i>
+                                    </div>
+                                    <input class="form-control" id="usernameOrEmail" type="text" placeholder="Uživatelské jméno *" name="usernameOrEmail" value="{{ usernameOrEmail }}">
+
+                                </div>
+                            </div>
+                            <span class="invalidFeedBack">
+                                {{ usernameOrEmailError }}
+                            </span>
+                        </div>
                     <div class="form-outline mb-4">
-                        <input class="form-control"  type="text" placeholder="Username *" name="usernameOrEmail" value="{{ usernameOrEmail }}">
-                        <span class="invalidFeedBack">
-                            {{ usernameOrEmailError }}
-                        </span>
-                    </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                        <div class="input-group-addon iconInputLeft pt-2" >
+                                            <i class="fas fa-lock formIcon"></i>
+                                        </div>
+                                        <input class="form-control" id="password" type="password" placeholder="Heslo *" name="password" />
+                                        <div class="input-group-addon iconInputRight pt-2" onclick="openCloseEye('password', 'openEye', 'closeEye')">
+                                                <i id="closeEye" class="fas fa-eye-slash"></i>
+                                                <i id="openEye" class="fas fa-eye" style="display:none;"></i>
 
-                    <div class="form-outline mb-4">
-                        <input class="form-control" type="text" placeholder="Password *" name="password">
-                        <span class="invalidFeedBack">
-                            {{ passwordError }}
-                        </span>
-                        {% if passwordError is not empty %}
-                            <br>
-                        {% endif %}
-                    </div>
+                                        </div>
+                                </div>
+                            </div>
+                            <span class="invalidFeedBack">
+                                {{ passwordError }}
+                            </span>
+                            {% if passwordError is not empty %}
+                                <br>
+                            {% endif %}
+                        </div>
 
-                    <button class="myBtn btn btn-primary w-100 h1" type="submit" value="submit">Submit</button>
-                    <div class="text-center">
-                        <p class="options">Not registered yet? <a href="{{ constant('URLROOT')}}/users/register">Sign up</a></p>
-                    </div>
+                        <button class="myBtn btn btn-primary w-100 h1" id="loginButton" disabled="disabled" type="submit" value="submit">Odeslat</button>
+                        <div class="text-center">
+                            <p class="options">
+                                Ještě nemáte účet?<a href="{{ constant('URLROOT')}}/users/register">Registrace</a></p>
+                        </div>
 
-            </form>
+                </form>
+            </div>
         </div>
-    </div>
     </div>
 </div>
 {% endblock %}
