--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,7 @@ body{
     background-attachment: fixed;
 }
 
+/** forms */
 .container-login{
     width: 100%;
     margin: 0 auto;
@@ -25,13 +26,32 @@ body{
     margin-top:2em;
 }
 
+
 .wrapper-login input{
     border: 1px solid #cccccc;
     background-color: #f5f5f5;
     font-size: 1em;
     display: block;
     position: relative;
-    margin: 20px auto;
+
+}
+
+.iconInputLeft{
+    border: 1px solid #cccccc;
+    background-color: #f5f5f5;
+    border-top-left-radius: 0.2em 0.2em;
+    border-bottom-left-radius: 0.2em 0.2em;
+    padding-left:0.2em;
+    padding-right:0.2em;
+}
+
+.iconInputRight{
+    border: 1px solid #cccccc;
+    background-color: #f5f5f5;
+    border-top-right-radius: 0.2em 0.2em;
+    border-bottom-right-radius: 0.2em 0.2em;
+    padding-left:0.2em;
+    padding-right:0.2em;
 }
 
 .wrapper-login h2{
@@ -49,6 +69,7 @@ body{
     color:#ff0000;
 }
 
+/* buttons */
 .myBtn{
     font-size:1.5em;
 }
@@ -69,6 +90,8 @@ body{
     transition: 0.20s ease-in-out;
 }
 
+
+/*  footer */
 .mainSiteContent{
     min-height: calc(100vh - 3em - 3em); <!-- 3em is height of the footer, 3em approximate height of navbar
                                         (cannot be specified exactly - cause of hamburger situation) -->
