add jquery, try with  javascript call reply (not working yet), styles
add icons to log in, logout
in Post controller repair problems with showing unsuccessful comment
style to comments

--- a/app/views/includes/head.inc.twig
+++ b/app/views/includes/head.inc.twig
@@ -22,5 +22,6 @@
             selector: '#wysiwygTextArea'
         });
     </script>
+    <script src="{{ constant('URLROOT') }}/public/javascript/jquery-3.6.0.js"></script>
     <script src="{{ constant('URLROOT') }}/public/javascript/javascript.js"></script>
 </head>
