--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ html, body{
     width:100%;
     padding:0;
     margin:0;
-    font-family: 'Lato', sans-serif;;
+    font-family: 'Lato', sans-serif;
     display:flex;
     flex-direction:column;
     font-size:1.2em;
@@ -20,12 +20,10 @@ body{
 /** forms */
 .container-login{
     width: 100%;
-    margin: 0 auto;
     float:none;
     text-align:center;
     margin-top:2em;
 }
-
 
 .wrapper-login input{
     border: 1px solid #cccccc;
@@ -33,7 +31,6 @@ body{
     font-size: 1em;
     display: block;
     position: relative;
-
 }
 
 .iconInputLeft{
@@ -71,7 +68,21 @@ body{
 
 /* buttons */
 .myBtn{
-    font-size:1.5em;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 0.2em 0.4em;
+}
+.myBtn:hover{
+    color:white;
+}
+
+.myBtn a{
+    text-decoration: none;
+    color:black;
+}
+
+.myBtn a:hover{
+    color:white;
 }
 .navbar{
     box-shadow: 0px 0px 10px #1a1a1a;
@@ -90,7 +101,27 @@ body{
     transition: 0.20s ease-in-out;
 }
 
+.red{
+    background-color: red;
+}
 
+.red:hover{
+    background-color: darkred;
+    transition: 0.20s ease-in-out;
+}
+
+.orange{
+    background-color: orange;
+}
+
+.orange:hover{
+    background-color: darkorange;
+    transition: 0.20s ease-in-out;
+}
+
+.lightBtn{
+    border: 0.1em ridge #cccccc;
+}
 /*  footer */
 .mainSiteContent{
     min-height: calc(100vh - 3em - 3em); <!-- 3em is height of the footer, 3em approximate height of navbar
@@ -101,4 +132,16 @@ body{
     height:3em;
     width:100%;
     margin-top:0.5em;
+}
+
+.addComment{
+    margin-bottom: 2em;
+    overflow: auto;
+}
+.comment{
+    border-left: 0.2em solid darkgrey;
+    border-bottom: 0.1em ridge darkgrey;
+    margin-bottom: 1em;
+    padding:0.5em;
+    overflow: auto;
 }
