--- a/app/views/includes/footer.inc.twig
+++ b/app/views/includes/footer.inc.twig
@@ -1,8 +1,8 @@
-<footer class="divFooter bg-light">
+<footer class="divFooter text-light bg-dark">
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2020 Copyright:
-        <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        <a class="text-light" href="https://mdbootstrap.com/">MDBootstrap.com</a>
     </div>
     <!-- Copyright -->
 </footer>
