--- a/app/views/includes/navigation.inc.twig
+++ b/app/views/includes/navigation.inc.twig
@@ -1,34 +1,46 @@
-<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="{{ constant('URLROOT')}}/pages/index">Home</a>
+            <a class="navbar-brand" href="{{ constant('URLROOT')}}/pages/index">Domů</a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-pills ">
-                <li class="nav-item"><a class="nav-link" href="{{ constant('URLROOT')}}/pages/about">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ constant('URLROOT')}}/pages/projects">Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ constant('URLROOT')}}/pages/contact">Contact</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ constant('URLROOT')}}/posts/index">Články</a></li>
+                <!--<li class="nav-item"><a class="nav-link" href=" constant('URLROOT')/pages/about">About</a></li> -->
+                <li class="nav-item"><a class="nav-link" href=" {{ constant('URLROOT')}}/pages/index#about">O nás</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ constant('URLROOT')}}/posts/index">Blog</a></li>
             </ul>
 
             <ul class="navbar-nav nav-pills ms-auto">
+                {% if session.user_id is not empty %}
+                <li class="nav-item">
+                    <span class="input-group">
+                        <a class="nav-link" href="{{ constant('URLROOT')}}/users/profil">
+                                    <i class="fas fa-users-cog"></i> Profil
+                            </a>
+                    </span>
+                </li>
+                <li class="nav-item">
+                    <span class="input-group nav-link">
+                            <i class="fas fa-user" rel="uživatel" title="uživatel"></i> {{ session.username }}({{ session.role }})
+                    </span>
+                </li>
                 <li class="nav-item btn-login">
-                    {% if session.user_id is not empty %}
                         <span class="input-group">
-                            <div class="pt-2" >
-                                <i class="fas fa-sign-out-alt"></i>
-                            </div>
-                            <a class="nav-link" href="{{ constant('URLROOT')}}/users/logout">Odhlásit se</a>
+                            <a class="nav-link" href="{{ constant('URLROOT')}}/users/logout">
+                                    <i class="fas fa-sign-out-alt"></i> Odhlásit se
+                            </a>
                         </span>
                     {% else %}
                         <span class="input-group">
-                            <div class="pt-2" >
-                                <i class="fas fa-sign-in-alt"></i>
-                            </div>
-                            <a class="nav-link" href="{{ constant('URLROOT')}}/users/login">Přihlásit se</a>
+                            <a class="nav-link" href="{{ constant('URLROOT')}}/users/login">
+                                <div >
+                                    <i class="fas fa-sign-in-alt"></i> Přihlásit se
+                                </div>
+
+                            </a>
                         </span>
                     {% endif %}
                 </li>
