--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,9 +7,10 @@ html, body{
     display:flex;
     flex-direction:column;
     font-size:1.2em;
-
     position: relative;
     min-height: 100%;
+
+    scroll-behavior: smooth;
 }
 body{
     background:  linear-gradient(45deg, rgb(130, 183, 220), #f2f2f2);
@@ -144,4 +145,22 @@ body{
     margin-bottom: 1em;
     padding:0.5em;
     overflow: auto;
+}
+
+.aboutSection{
+    background:url(../img/blueGray.jpg);
+    color:white;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+    padding: 0.5em 1em;
+}
+
+.aboutSection h1{
+    font-size:2em;
+    text-transform: uppercase;
+    padding-top: 0.2em;
 }
